# RoleRadar

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  resource.txt
src/: database.md  env_loader.py  execute.sh  schedule.md
src/apply/: apply.md  apply.sh  cover.py  green_apply_schema.py  handle_jobs.py  open_apply_jobs.py  open_jobs.py  order_jobs.py  prepare_app.py
src/apply/utility/: backfill_application.py  dump_apply_html.py  reset_green_apply.py  reset_green_score_viewed.py
src/assignment/: assignment.md  candidate_filter.py  job_enrichment.py
src/assignment/greenhouse_job_response/: algolia.md  armissecurity_5775403004.md  artefactus_8112234002.md  axon_6475529003.md  chime_8376910002.md  esri_5072493007.md  grammarly_7336882.md  jensenhughes_5076449008.md  melio_7174896003.md  spacex_8330100002.md  stubhubinc_4792622101.md
src/collection/: __init__.py  ashby.py  ats_common.py  board_hash.py  cli.py  collection.md  collection.py  collection_control.py  config.py  create_board_snapshot.py  create_job.py  delete.py  green.py  lever.py  models.py  normalization.py  pull_ten.py  upsert.py  upsert_jobs.py
src/discovery/: create_ats_board.py  create_keyword.py  create_you_search.py  discovery.md  discovery_names.txt  persist_names.py  query_names.py  you_query.py  you_search.py
src/enrichment/: candidate_filter.py  delete_404_jobs.py  enrichment.md  job_enrichment.py  validity_check.py
src/ingestion/: database.py  pipeline.py  schemas.py
src/scoring/: rate_limits.md  score_job.py  scoring.md
src/utility/: monitor.py
(+34 files in other folders)
