[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-ingestion"
version = "0.1.0"
description = "Ingestion pipeline for Greenhouse and Lever job boards into PostgreSQL."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<1",
  "pydantic-settings>=2.2,<3",
  "sqlalchemy>=2.0,<3",
  "psycopg[binary]>=3.1,<4",
]

[project.scripts]
ingest-jobs = "ingestion.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

